@@ -3,9 +3,11 @@ package net.silentchaos512.scalinghealth.proxy;
 import net.minecraft.client.Minecraft;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraftforge.common.MinecraftForge;
+import net.minecraftforge.fml.common.Loader;
 import net.silentchaos512.lib.registry.SRegistry;
 import net.silentchaos512.scalinghealth.client.HeartDisplayHandler;
 import net.silentchaos512.scalinghealth.event.ScalingHealthClientEvents;
+import net.silentchaos512.scalinghealth.event.WitEventHandler;
 
 public class ScalingHealthClientProxy extends ScalingHealthCommonProxy {
 
@@ -15,6 +17,8 @@ public class ScalingHealthClientProxy extends ScalingHealthCommonProxy {
     super.preInit(registry);
     MinecraftForge.EVENT_BUS.register(new ScalingHealthClientEvents());
     MinecraftForge.EVENT_BUS.register(new HeartDisplayHandler());
+    if (Loader.isModLoaded("wit") || Loader.isModLoaded("WIT"))
+      MinecraftForge.EVENT_BUS.register(new WitEventHandler());
     registry.clientPreInit();
   }
 
